update css disemua assets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,11 @@ body {
 .container {
   width: 100%;
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+.item {
+  flex: 1 1 100%; /* Item akan mengambil 100% lebar pada layar kecil */
 }
 
 /* ----- NAVIGATION BAR ----- */
@@ -555,6 +560,22 @@ footer {
     width: 320px;
     height: 320px;
   }
+}
+/* coba sendiri */
+@media (max-width: 768px) {
+  /* Gaya untuk perangkat dengan lebar maksimum 768px */
+  body {
+      background-color: lightblue;
+  }
+}
+
+.box {
+  width: 50%; /* Lebar 50% dari kontainer */
+}
+
+img {
+  max-width: 100%;
+  height: auto; /* Memastikan gambar tidak terdistorsi */
 }
 
 /* ----- MEDIA QUERY == 900px / RESPONSIVE ----- */
