--- a/codezone_P7/assets/css/style.css
+++ b/codezone_P7/assets/css/style.css
@@ -4,7 +4,7 @@
 /* ----- VARIABLES ----- */
 :root {
   /* Background and Primary Colors */
-  --body-color: #866363; /* Hitam abu-abu pekat untuk latar belakang, memberikan kesan elegan dan profesional */
+  --body-color: #6f4a4a; /* Hitam abu-abu pekat untuk latar belakang, memberikan kesan elegan dan profesional */
   --color-white: #e2e2e2; /* Putih keabu-abuan yang lembut untuk mengurangi kontras yang terlalu tajam */
 
   /* Text Colors */
